--- a/templates/base.html
+++ b/templates/base.html
@@ -4,22 +4,44 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bookstore - Simple is Better Than Complex</title>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
+    <link href="{% static 'css/index.css'%}" rel="stylesheet">
+
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
-  <body>
-    {% include 'includes/header.html' %}
-    <div class="container">
-      {% block content %}
-      {% endblock %}
+<body class="content">
+
+    <div style="padding-top: 7%;"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action active">
+                    Menu
+                  </a>
+                  <a href="{% url 'equipo_list' %}" class="list-group-item list-group-item-action disabled">Equipos
+                  </a>
+                  <a href="#" class="list-group-item list-group-item-action ">Ubicación
+                  </a>
+                    <a href="#" class="list-group-item list-group-item-action ">Usuarios
+                  </a>
+                </div>
+            </div>
+            <div class="col-md-10">
+                <div class="jumbotron">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
     </div>
-    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block javascript %}
     {% endblock %}
-  </body>
+</body>
 </html>
