--- a/templates/equipos/includes/partial_equipos_list.html
+++ b/templates/equipos/includes/partial_equipos_list.html
@@ -13,12 +13,12 @@
       <button type="button"
               class="btn btn-warning btn-sm js-update-equipo"
               data-url="{% url 'equipo_update' equipo.id_equipos %}">
-        <span class="glyphicon glyphicon-pencil"></span> Edit
+        <span class="glyphicon glyphicon-pencil"></span> Editar
       </button>
       <button type="button"
               class="btn btn-danger btn-sm js-delete-equipo"
               data-url="{% url 'equipo_delete' equipo.id_equipos %}">
-        <span class="glyphicon glyphicon-trash"></span> Delete
+        <span class="glyphicon glyphicon-trash"></span> Eliminar
       </button>
     </td>
   </tr>
