--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     {% include 'navbar.html' %}
 </head>
 <body class="content">
+{% include 'includes/header.html' %}
     <div style="padding-top: 10%;"></div>
     <div class="container-fluid">
         <div class="row">
@@ -41,6 +42,10 @@
             </div>
         </div>
     </div>
+<script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    {% block javascript %}
+    {% endblock %}
 </body>
 
 </html>
