--- a/templates/TipoEquipos/tipo_equipo_list.html
+++ b/templates/TipoEquipos/tipo_equipo_list.html
@@ -12,7 +12,7 @@
   <p>
     <button type="button" class="btn btn-primary js-create-tipo-equipo" data-url="{% url 'tipo_equipo_create' %}">
       <span class="glyphicon glyphicon-plus"></span>
-      Nuevo equipo
+      Nuevo tipo
     </button>
   </p>
 
