--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,9 @@
                   <a href="#" class="list-group-item list-group-item-action active">
                     Menu
                   </a>
-                  <a href="{% url 'equipo_list' %}" class="list-group-item list-group-item-action disabled">Equipos
+                  <a href="{% url 'equipo_list' %}" class="list-group-item list-group-item-action ">Equipos
+                  </a>
+                    <a href="{% url 'tipo_equipo_list' %}" class="list-group-item list-group-item-action ">Tipo de equipos
                   </a>
                   <a href="#" class="list-group-item list-group-item-action ">Ubicación
                   </a>
