--- a/templates/equipos/equipo_list.html
+++ b/templates/equipos/equipo_list.html
@@ -35,7 +35,7 @@
   </table>
 
   <div class="modal fade" id="modal-equipo">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
 
       </div>
