--- a/templates/equipos/includes/partial_equipos_update.html
+++ b/templates/equipos/includes/partial_equipos_update.html
@@ -2,7 +2,7 @@
   {% csrf_token %}
 
     <div class="modal-header">
-         <h4 class="modal-title">Actualizar book</h4>
+         <h4 class="modal-title">Actualizar Equipos</h4>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -11,8 +11,5 @@
   <div class="modal-body">
     {% include 'equipos/includes/partial_equipos_form.html' %}
   </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-primary">Actualizar</button>
-  </div>
+
 </form>
