--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,14 @@
     <link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
     <link href="{% static 'css/index.css'%}" rel="stylesheet">
     <link href="{% static 'css/animate.css'%}" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 
   </head>
+    {% include 'notification_panel.html' %}
 <body class="content">
 
     <div style="padding-top: 7%;"></div>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-2">
@@ -22,7 +25,7 @@
                   <a href="#" class="list-group-item list-group-item-action active">
                     Menu
                   </a>
-                  <a href="{% url 'equipo_list' %}" class="list-group-item list-group-item-action ">Equipos
+                  <a href="{% url 'equipo_list' %}" class="list-group-item list-group-item-action "><i class="fas fa-laptop"></i> Equipos
                   </a>
                     <a href="{% url 'tipo_equipo_list' %}" class="list-group-item list-group-item-action ">Tipo de equipos
                   </a>
@@ -41,6 +44,7 @@
         </div>
     </div>
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+    <script src="{% static 'js/popper.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <script src="{% static 'js/bootstrap-notify-3.1.3/bootstrap-notify.js' %}"></script>
