--- a/templates/notification_panel.html
+++ b/templates/notification_panel.html
@@ -1,16 +1,18 @@
+{% load  staticfiles %}
+
 <div class="btn-group" style="padding-top: 2%;padding-right:2% ;float: right" role="group" aria-label="Button group with nested dropdown">
-    <form method="get" action="{% url 'mantenimiento_list' %}" class="js-notification">
+    <form method="get" action="{% url 'mantenimiento_list' %}" data-url="{% url 'mantenimiento_list' %}" class="js-notification">
       <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" style="border-radius: 100%" class="btn btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bell"></i></button>
-        <div class="dropdown-menu animated fadeIn" aria-labelledby="btnGroupDrop1" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 37px, 0px); top: 0px; left: 0px; will-change: transform;">
+        <button id="btnGroupDrop1" type="submit" style="border-radius: 100%" class="btn btn-primary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bell"></i></button>
+        <div id="dropdown-notifications" class="dropdown-menu animated fadeIn" aria-labelledby="btnGroupDrop1" x-placement="bottom-start" style="position: absolute; transform: translate3d(0px, 37px, 0px); top: 0px; left: 0px; will-change: transform;">
               {% csrf_token %}
-               {% for man in mantenimientos_list %}
-                    <a class="dropdown-item" href="#">{{ man }}</a>
-               {% empty %}
-                  <a class="" href="#">No hay mantenimientos</a>
-               {% endfor %}
+            <a class="dropdown-item" href="#"></a>
+
         </div>
       </div>
     </form>
 </div>
+  {% block javascript %}
+        <script src="{% static 'js/panel-notification.js' %}"></script>
+    {% endblock %}
 
